force-app/main/default/objects/Carnet_masivo__c/Carnet_masivo__c.object-meta.xml
<CustomObject>
    <label>Carnet masivo</label>
    <nameField>
        <label>Nombre de Carnet masivo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carnet masivo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>