force-app/main/default/objects/Carnet_masivo__c/fields/cod_barra__c.field-meta.xml
<CustomField>
    <fullName>cod_barra__c</fullName>
    <label>cod barra</label>
    <length>50</length>
    <type>Text</type>
</CustomField>